finish classic migration!!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,15 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <title>{% if page.title %}{{ page.title }} &ndash; {% endif %}{{ site.title }}</title>
   <meta name="description" content="{{ site.description }}" />
   <meta name="google-site-verification" content="{{ site.google-verification }}">
-  <link rel="shortcut icon" href="/assets/img/icons/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/icons/apple-touch-icon-144x144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/icons/apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/icons/apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="/assets/img/icons/apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png?v=LbGQnBrmkJ">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png?v=LbGQnBrmkJ">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png?v=LbGQnBrmkJ">
+  <link rel="manifest" href="/assets/favicon/manifest.json?v=LbGQnBrmkJ">
+  <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg?v=LbGQnBrmkJ" color="#abbd9c">
+  <link rel="shortcut icon" href="/assets/favicon/favicon.ico?v=LbGQnBrmkJ">
+  <meta name="apple-mobile-web-app-title" content="Life Flower">
+  <meta name="application-name" content="Life Flower">
+  <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml?v=LbGQnBrmkJ">
+  <meta name="theme-color" content="#efefef">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/app.css">
+  <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
