remove unneeded products

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,13 @@
 <script src="/assets/js/all.js"></script>
 <script src="/assets/js/app.js"></script>
-<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="NmViZTE3YjctYWY4YS00MzU5LTlhM2YtYzFkMTY3NzM1NWQzNjM2NDA5NjE2NTY0NDQxMzkx"></script>
+<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
+  id="snipcart"
+  data-api-key="NmViZTE3YjctYWY4YS00MzU5LTlhM2YtYzFkMTY3NzM1NWQzNjM2NDA5NjE2NTY0NDQxMzkx"
+  data-cart-custom1-name="Sales Tax ID/Reseller's License"
+  data-cart-custom1-required="true"
+  data-cart-custom2-name="I have a valid Sales Tax ID/Resellers License that allows me to purchase products for resale. I understand that providing inaccurate information here may cause my order to be delayed or cancelled, and that I may be contacted to provide verification of my tax exempt status."
+  data-cart-custom2-options="true|false"
+  data-cart-custom2-required="true">
+</script>
 </body>
 </html>
