use wholesale content and API key

--- a/_layouts/bundle.html
+++ b/_layouts/bundle.html
@@ -21,11 +21,11 @@ layout: default
     {% if page.orderable == true %}
     <a class="button__buy button__buy--item-page snipcart-add-item"
     data-item-id="{{page.name | slugify}}"
-    data-item-name="{{page.name}}"
-    data-item-price="{{page.price}}"
+    data-item-name="{{page.name}} (Case of {{product.case-count}})"
+    data-item-price="{{page.price_case}}"
     data-item-price-wholesale="{{page.price_wholesale}}"
     data-item-url="{{page.url}}"
-    data-item-weight="{{page.weight}}"
+    data-item-weight="{{page.weight_case}}"
     data-item-description="{{page.description}}"
     data-item-shipable="true"
     data-item-stackable="{{page.stackable}}"
