background color on body

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,4 @@
   <link rel="stylesheet" href="/assets/css/app.css">
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:{{page.background-color}};">
