Update for Wholesale info

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,9 +13,9 @@
     <nav class="nav-links">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/shop">Shop Online</a></li>
-        <li><a href="/shop/category/bundles/">Bundles</a></li>
-        <li><a href="/locations">Locations</a></li>
+        <li><a href="/shop">Shop Wholesale</a></li>
+        <!-- <li><a href="/shop/category/bundles/">Bundles</a></li> -->
+        <!-- <li><a href="/locations">Locations</a></li> -->
         <li><a href="mailto:{{site.data.settings.location.email}}">Contact</a></li>
       </ul>
     </nav>
