--- a/_layouts/bundles.html
+++ b/_layouts/bundles.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include shop-categories.html %}
+<!-- {% include shop-categories.html %} -->
 
 <div class="shop-bundles">
   <div class="shop-bundles__grid">
