--- a/_layouts/product-category.html
+++ b/_layouts/product-category.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include shop-categories.html %}
+<!-- {% include shop-categories.html %} -->
 
 <main class="products">
 
