--- a/_layouts/products.html
+++ b/_layouts/products.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-{% include shop-categories.html %}
+<!-- {% include shop-categories.html %} -->
 
-<div class="bundles">{% include shop-bundles.html %}</div>
+<!-- <div class="bundles">{% include shop-bundles.html %}</div>
 
 <br>
 
 <a class="button__buy button__buy--item-page" href="/shop/category/bundles">
     Shop All Bundles
-</a>
+</a> -->
 
 <div id="products-top"></div>
 
