--- a/_includes/nav-expanded.html
+++ b/_includes/nav-expanded.html
@@ -20,9 +20,9 @@
   <nav class="nav-links-mobile">
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/shop">Shop Products</a></li>
-      <li><a href="/shop/category/bundles/">Bundles</a></li>
-      <li><a href="/locations">Locations</a></li>
+      <li><a href="/shop">Shop Wholesale</a></li>
+      <!-- <li><a href="/shop/category/bundles/">Bundles</a></li> -->
+      <!-- <li><a href="/locations">Locations</a></li> -->
       <li><a href="/ordering">Ordering Info</a></li>
       <li><a href="/disclaimer">Disclaimer</a></li>
       <li><a href="mailto:{{site.data.settings.location.email}}">Contact Us</a></li>
