update skinny cta

--- a/_includes/cta-skinny.html
+++ b/_includes/cta-skinny.html
@@ -2,7 +2,7 @@
 
   <a href="/shop/#products-top" class="cta-skinny__content">
     <div class="category-new category-new--dark category-new--banner">New</div>
-    <div class="cta-skinny__content__text">Our online store is back!</div>
+    <div class="cta-skinny__content__text">CBD Lip Balms, our latest creation, now available</div>
     <div class="cta-skinny__content__arrow"><img src="/assets/img/icon--menu-go.svg"></div>
   </a>
 
