--- a/_includes/cta-skinny.html
+++ b/_includes/cta-skinny.html
@@ -1,8 +1,8 @@
 <div class="cta-skinny">
 
-  <a href="/shop/#products-top" class="cta-skinny__content">
-    <div class="category-new category-new--dark category-new--banner">New</div>
-    <div class="cta-skinny__content__text">CBD Lip Balms, our latest creation, now&nbsp;available</div>
+  <a href="/health-statement" class="cta-skinny__content">
+    <!-- <div class="category-new category-new--dark category-new--banner">New</div> -->
+    <div class="cta-skinny__content__text">Open and taking orders. Read our Covid-19 response</div>
     <div class="cta-skinny__content__arrow"><img src="/assets/img/icon--menu-go.svg"></div>
   </a>
 
