--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,16 @@
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/app.css">
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163995371-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-163995371-1');
+  </script>
+
 </head>
 <body style="background-color:{{page.background-color}};">
