add product dimensions for shipping integration test

--- a/_layouts/product-category.html
+++ b/_layouts/product-category.html
@@ -49,6 +49,9 @@ layout: default
           data-item-price-wholesale="{{product.price_wholesale}}"
           data-item-url="{{product.url}}"
           data-item-weight="{{product.weight}}"
+          data-item-length="{{product.length}}"
+          data-item-height="{{product.height}}"
+          data-item-width="{{product.width}}"
           data-item-description="{{product.description}}"
           data-item-shipable="true"
           data-item-stackable="{{product.stackable}}"
