--- a/_layouts/product-category.html
+++ b/_layouts/product-category.html
@@ -49,9 +49,15 @@ layout: default
           data-item-price-wholesale="{{product.price_wholesale}}"
           data-item-url="{{product.url}}"
           data-item-weight="{{product.weight}}"
-          data-item-length="{{product.length}}"
-          data-item-height="{{product.height}}"
-          data-item-width="{{product.width}}"
+          {% if product.length != null %}
+            data-item-length="{{product.length}}"
+          {% endif %}
+          {% if product.height != null %}
+            data-item-height="{{product.height}}"
+          {% endif %}
+          {% if product.width != null %}
+            data-item-width="{{product.width}}"
+          {% endif %}
           data-item-description="{{product.description}}"
           data-item-shipable="true"
           data-item-stackable="{{product.stackable}}"
