--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,7 +2,8 @@
 <script src="/assets/js/app.js"></script>
 <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
   id="snipcart"
-  data-api-key="NmViZTE3YjctYWY4YS00MzU5LTlhM2YtYzFkMTY3NzM1NWQzNjM2NDA5NjE2NTY0NDQxMzkx"
+  data-api-key="NmViZTE3YjctYWY4YS00MzU5LTlhM2YtYzFkMTY3NzM1NWQzNjM2NDA5NjE2NTY0NDQxMzkx" 
+  hidden
   >
 </script>
 </body>
