--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,7 +2,8 @@
 <script src="/assets/js/app.js"></script>
 <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js"
   id="snipcart"
-  data-api-key="ZDlhMjNhYjktNjA3Yi00ZWU2LWIyNjktNDQyMzA2NTE3YzAyNjM2NzY5ODk2MjY4NjA3MzI5"
+  data-api-key="ZDlhMjNhYjktNjA3Yi00ZWU2LWIyNjktNDQyMzA2NTE3YzAyNjM2NzY5ODk2MjY4NjA3MzI5" 
+  hidden 
   data-cart-custom1-name="Sales Tax ID/Reseller's License"
   data-cart-custom1-required="true"
   data-cart-custom2-name="I have a valid Sales Tax ID/Resellers License that allows me to purchase products for resale. I understand that providing inaccurate information here may cause my order to be delayed or cancelled, and that I may be contacted to provide verification of my tax exempt status."
