refactor product grid to use flexbox

--- a/_layouts/product-category.html
+++ b/_layouts/product-category.html
@@ -15,7 +15,7 @@ layout: default
 
   {% if category-slug == product-category-slug %}
 
-  <div class="product {% if product.cell_layout == "small" %}product--small{% endif %}">
+  <div class="product">
 
     <div class="product__container">
 
