--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -109,3 +109,4 @@
 // 11. Utilities
 // --------------------------------------------------
 @import 'utilities/text-utilities';
+@import 'utilities/display-utilities';
