--- a/assets/scss/layouts/_l-shop.scss
+++ b/assets/scss/layouts/_l-shop.scss
@@ -3,13 +3,17 @@
 // --------------------------------------------------
 
 main {
-  @include grid-row;
+  // @include grid-row;
 
   //other elements
   //@include grid-column;
 }
 
-.products {
+.products { 
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-end;
 
   margin-top: 80px;
 
@@ -37,7 +41,6 @@ main {
   }
 
   @include breakpoint(medium){
-    float: left;
     width: 50%;
   }
 
@@ -80,8 +83,8 @@ main {
 
   &__content {
     position: relative;
-    top: 100%;
-    transform: translateY(-100%);
+    height: 100%;
+    // transform: translateY(-100%);
   }
 
   &__title {
