--- a/_layouts/product-category.html
+++ b/_layouts/product-category.html
@@ -27,7 +27,7 @@ layout: default
       <div class="product__new-spacer"></div>
       {% endif %}
 
-      <a href="{{product.url}}">
+      <a class="display-inline-block" href="{{product.url}}">
         <div class="product__content">
 
           <img class="cf-responsive" src="{{product.image-url}}">
