--- a/_includes/cta-skinny.html
+++ b/_includes/cta-skinny.html
@@ -2,7 +2,7 @@
 
   <a href="/health-statement" class="cta-skinny__content">
     <!-- <div class="category-new category-new--dark category-new--banner">New</div> -->
-    <div class="cta-skinny__content__text">Open and taking orders. Read our Covid-19 response</div>
+    <div class="cta-skinny__content__text">Safe shipping. Covid-19 updates.</div>
     <div class="cta-skinny__content__arrow"><img src="/assets/img/icon--menu-go.svg"></div>
   </a>
 
