--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -28,7 +28,7 @@ layout: default
     {% if page.orderable == true %}
     <a class="button__buy button__buy--item-page snipcart-add-item"
     data-item-id="{{page.name | slugify}}"
-    data-item-name="{{page.name}} (Case of {{product.case-count}})"
+    data-item-name="{{page.name}} (Case of {{page.case-count}})"
     data-item-price="{{page.price_case}}"
     data-item-price-wholesale="{{page.price_wholesale}}"
     data-item-url="{{page.url}}"
